feat sel & param tun

--- a/notebooks/parameter_tuning.ipynb
+++ b/notebooks/parameter_tuning.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(113,)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
@@ -27,7 +16,6 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "# use seaborn plotting defaults\n",
@@ -202,9 +190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 37.7 s, sys: 24 ms, total: 37.8 s\n",
+      "Wall time: 37.8 s\n",
+      "CPU times: user 1min 19s, sys: 956 ms, total: 1min 20s\n",
+      "Wall time: 45 s\n",
+      "CPU times: user 40.2 s, sys: 712 ms, total: 40.9 s\n",
+      "Wall time: 22.3 s\n",
+      "CPU times: user 58.1 s, sys: 16 ms, total: 58.2 s\n",
+      "Wall time: 58 s\n"
+     ]
+    }
+   ],
    "source": [
     "file = open(\"../reports/parameter_tuning\", 'w')\n",
     "\n",
@@ -222,7 +225,7 @@
     "    file.write('Grid Search for '+ name +'\\n')\n",
     "    clf = GridSearchCV(estimator, tuned_parameters, cv=10)\n",
     "    %time clf.fit(X_train, Y_train)\n",
-    "    print(clf.best_params_)\n",
+    "    file.write(str(clf.best_params_))\n",
     "    file.write('\\n')\n",
     "    means = clf.cv_results_['mean_test_score']\n",
     "    stds = clf.cv_results_['std_test_score']\n",
@@ -240,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -311,13 +314,13 @@
       "4144    False\n",
       "4145     True\n",
       "Name: label, Length: 4146, dtype: bool\n",
-      "CPU times: user 31.2 s, sys: 0 ns, total: 31.2 s\n",
-      "Wall time: 31 s\n",
-      "CPU times: user 2min 35s, sys: 1.08 s, total: 2min 36s\n",
-      "Wall time: 1min 54s\n",
-      "CPU times: user 14.3 s, sys: 320 ms, total: 14.7 s\n",
-      "Wall time: 7.42 s\n",
-      "CPU times: user 1min, sys: 8 ms, total: 1min\n",
+      "CPU times: user 31.3 s, sys: 4 ms, total: 31.3 s\n",
+      "Wall time: 31.1 s\n",
+      "CPU times: user 2min 34s, sys: 1.1 s, total: 2min 35s\n",
+      "Wall time: 1min 53s\n",
+      "CPU times: user 14.4 s, sys: 288 ms, total: 14.7 s\n",
+      "Wall time: 7.37 s\n",
+      "CPU times: user 1min 1s, sys: 0 ns, total: 1min 1s\n",
       "Wall time: 1min\n",
       "\n",
       "\n",
@@ -384,19 +387,87 @@
       "4144    False\n",
       "4145     True\n",
       "Name: label, Length: 4146, dtype: bool\n",
-      "CPU times: user 30.5 s, sys: 20 ms, total: 30.5 s\n",
-      "Wall time: 30.4 s\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "write() argument must be str, not dict",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-8ad4a336a3f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     60\u001b[0m         \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGridSearchCV\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtuned_parameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'clf.fit(X_train, Y_train)'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m         \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_params_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m         \u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0mmeans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcv_results_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'mean_test_score'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: write() argument must be str, not dict"
+      "CPU times: user 30.8 s, sys: 4 ms, total: 30.8 s\n",
+      "Wall time: 30.6 s\n",
+      "CPU times: user 2min 32s, sys: 1.16 s, total: 2min 34s\n",
+      "Wall time: 1min 52s\n",
+      "CPU times: user 1min 40s, sys: 960 ms, total: 1min 41s\n",
+      "Wall time: 1min 18s\n",
+      "CPU times: user 1min 2s, sys: 0 ns, total: 1min 2s\n",
+      "Wall time: 1min 2s\n",
+      "\n",
+      "\n",
+      "\n",
+      "0        True\n",
+      "1        True\n",
+      "2        True\n",
+      "3        True\n",
+      "4       False\n",
+      "5        True\n",
+      "6       False\n",
+      "7       False\n",
+      "8       False\n",
+      "9       False\n",
+      "10      False\n",
+      "11      False\n",
+      "12      False\n",
+      "13      False\n",
+      "14       True\n",
+      "15       True\n",
+      "16      False\n",
+      "17      False\n",
+      "18      False\n",
+      "19      False\n",
+      "20       True\n",
+      "21      False\n",
+      "22      False\n",
+      "23      False\n",
+      "24      False\n",
+      "25      False\n",
+      "26      False\n",
+      "27      False\n",
+      "28      False\n",
+      "29      False\n",
+      "        ...  \n",
+      "4116    False\n",
+      "4117    False\n",
+      "4118    False\n",
+      "4119    False\n",
+      "4120    False\n",
+      "4121    False\n",
+      "4122    False\n",
+      "4123    False\n",
+      "4124    False\n",
+      "4125    False\n",
+      "4126    False\n",
+      "4127    False\n",
+      "4128    False\n",
+      "4129    False\n",
+      "4130    False\n",
+      "4131    False\n",
+      "4132    False\n",
+      "4133    False\n",
+      "4134    False\n",
+      "4135    False\n",
+      "4136    False\n",
+      "4137    False\n",
+      "4138    False\n",
+      "4139    False\n",
+      "4140    False\n",
+      "4141    False\n",
+      "4142    False\n",
+      "4143    False\n",
+      "4144    False\n",
+      "4145     True\n",
+      "Name: label, Length: 4146, dtype: bool\n",
+      "CPU times: user 32.1 s, sys: 8 ms, total: 32.1 s\n",
+      "Wall time: 31.9 s\n",
+      "CPU times: user 1min 44s, sys: 1.16 s, total: 1min 45s\n",
+      "Wall time: 1min 3s\n",
+      "CPU times: user 25.3 s, sys: 532 ms, total: 25.8 s\n",
+      "Wall time: 13.4 s\n",
+      "CPU times: user 1min, sys: 8 ms, total: 1min\n",
+      "Wall time: 1min\n"
      ]
     }
    ],
@@ -462,7 +533,7 @@
     "        file.write('Grid Search for '+ name +'\\n')\n",
     "        clf = GridSearchCV(estimator, tuned_parameters, cv=10)\n",
     "        %time clf.fit(X_train, Y_train)\n",
-    "        file.write((clf.best_params_))\n",
+    "        file.write(str(clf.best_params_))\n",
     "        file.write('\\n')\n",
     "        means = clf.cv_results_['mean_test_score']\n",
     "        stds = clf.cv_results_['std_test_score']\n",
