features and baseline

--- a/notebooks/parameter_tuning.ipynb
+++ b/notebooks/parameter_tuning.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/vasilis/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import pandas as pd\n",
@@ -190,21 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 37.7 s, sys: 24 ms, total: 37.8 s\n",
-      "Wall time: 37.8 s\n",
-      "CPU times: user 1min 19s, sys: 956 ms, total: 1min 20s\n",
-      "Wall time: 45 s\n",
-      "CPU times: user 40.2 s, sys: 712 ms, total: 40.9 s\n",
-      "Wall time: 22.3 s\n",
-      "CPU times: user 58.1 s, sys: 16 ms, total: 58.2 s\n",
-      "Wall time: 58 s\n"
+      "CPU times: user 38.9 s, sys: 4 ms, total: 38.9 s\n",
+      "Wall time: 38.9 s\n",
+      "CPU times: user 1min 24s, sys: 1.12 s, total: 1min 25s\n",
+      "Wall time: 48.8 s\n",
+      "CPU times: user 45.5 s, sys: 916 ms, total: 46.4 s\n",
+      "Wall time: 27.5 s\n",
+      "CPU times: user 58.9 s, sys: 20 ms, total: 58.9 s\n",
+      "Wall time: 58.8 s\n"
      ]
     }
    ],
@@ -231,6 +240,7 @@
     "    stds = clf.cv_results_['std_test_score']\n",
     "    for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
     "        file.write(\"%0.3f (+/-%0.03f) for %r\\n\"% (mean, std * 2, params))\n",
+    "    file.write('\\nmean accuracy score:'+str(means.sum()/len(means)))\n",
     "    file.write('\\n')\n",
     "    file.write('\\n')\n",
     "    y_true, y_pred = Y_test, clf.predict(X_test)\n",
@@ -243,231 +253,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0        True\n",
-      "1        True\n",
-      "2        True\n",
-      "3        True\n",
-      "4       False\n",
-      "5        True\n",
-      "6       False\n",
-      "7       False\n",
-      "8       False\n",
-      "9       False\n",
-      "10      False\n",
-      "11      False\n",
-      "12      False\n",
-      "13      False\n",
-      "14       True\n",
-      "15       True\n",
-      "16      False\n",
-      "17      False\n",
-      "18      False\n",
-      "19      False\n",
-      "20       True\n",
-      "21      False\n",
-      "22      False\n",
-      "23      False\n",
-      "24      False\n",
-      "25      False\n",
-      "26      False\n",
-      "27      False\n",
-      "28      False\n",
-      "29      False\n",
-      "        ...  \n",
-      "4116    False\n",
-      "4117    False\n",
-      "4118    False\n",
-      "4119    False\n",
-      "4120    False\n",
-      "4121    False\n",
-      "4122    False\n",
-      "4123    False\n",
-      "4124    False\n",
-      "4125    False\n",
-      "4126    False\n",
-      "4127    False\n",
-      "4128    False\n",
-      "4129    False\n",
-      "4130    False\n",
-      "4131    False\n",
-      "4132    False\n",
-      "4133    False\n",
-      "4134    False\n",
-      "4135    False\n",
-      "4136    False\n",
-      "4137    False\n",
-      "4138    False\n",
-      "4139    False\n",
-      "4140    False\n",
-      "4141    False\n",
-      "4142    False\n",
-      "4143    False\n",
-      "4144    False\n",
-      "4145     True\n",
-      "Name: label, Length: 4146, dtype: bool\n",
-      "CPU times: user 31.3 s, sys: 4 ms, total: 31.3 s\n",
-      "Wall time: 31.1 s\n",
-      "CPU times: user 2min 34s, sys: 1.1 s, total: 2min 35s\n",
-      "Wall time: 1min 53s\n",
-      "CPU times: user 14.4 s, sys: 288 ms, total: 14.7 s\n",
-      "Wall time: 7.37 s\n",
-      "CPU times: user 1min 1s, sys: 0 ns, total: 1min 1s\n",
-      "Wall time: 1min\n",
+      "CPU times: user 33.9 s, sys: 20 ms, total: 33.9 s\n",
+      "Wall time: 33.8 s\n",
+      "CPU times: user 2min 55s, sys: 1.29 s, total: 2min 56s\n",
+      "Wall time: 2min 16s\n",
+      "CPU times: user 16.9 s, sys: 352 ms, total: 17.3 s\n",
+      "Wall time: 8.84 s\n",
+      "CPU times: user 1min 5s, sys: 16 ms, total: 1min 5s\n",
+      "Wall time: 1min 5s\n",
       "\n",
       "\n",
       "\n",
-      "0        True\n",
-      "1        True\n",
-      "2        True\n",
-      "3        True\n",
-      "4       False\n",
-      "5        True\n",
-      "6       False\n",
-      "7       False\n",
-      "8       False\n",
-      "9       False\n",
-      "10      False\n",
-      "11      False\n",
-      "12      False\n",
-      "13      False\n",
-      "14       True\n",
-      "15       True\n",
-      "16      False\n",
-      "17      False\n",
-      "18      False\n",
-      "19      False\n",
-      "20       True\n",
-      "21      False\n",
-      "22      False\n",
-      "23      False\n",
-      "24      False\n",
-      "25      False\n",
-      "26      False\n",
-      "27      False\n",
-      "28      False\n",
-      "29      False\n",
-      "        ...  \n",
-      "4116    False\n",
-      "4117    False\n",
-      "4118    False\n",
-      "4119    False\n",
-      "4120    False\n",
-      "4121    False\n",
-      "4122    False\n",
-      "4123    False\n",
-      "4124    False\n",
-      "4125    False\n",
-      "4126    False\n",
-      "4127    False\n",
-      "4128    False\n",
-      "4129    False\n",
-      "4130    False\n",
-      "4131    False\n",
-      "4132    False\n",
-      "4133    False\n",
-      "4134    False\n",
-      "4135    False\n",
-      "4136    False\n",
-      "4137    False\n",
-      "4138    False\n",
-      "4139    False\n",
-      "4140    False\n",
-      "4141    False\n",
-      "4142    False\n",
-      "4143    False\n",
-      "4144    False\n",
-      "4145     True\n",
-      "Name: label, Length: 4146, dtype: bool\n",
-      "CPU times: user 30.8 s, sys: 4 ms, total: 30.8 s\n",
-      "Wall time: 30.6 s\n",
-      "CPU times: user 2min 32s, sys: 1.16 s, total: 2min 34s\n",
-      "Wall time: 1min 52s\n",
-      "CPU times: user 1min 40s, sys: 960 ms, total: 1min 41s\n",
-      "Wall time: 1min 18s\n",
-      "CPU times: user 1min 2s, sys: 0 ns, total: 1min 2s\n",
-      "Wall time: 1min 2s\n",
+      "CPU times: user 34.3 s, sys: 12 ms, total: 34.3 s\n",
+      "Wall time: 34.2 s\n",
+      "CPU times: user 2min 47s, sys: 1.29 s, total: 2min 48s\n",
+      "Wall time: 2min 8s\n",
+      "CPU times: user 1min 41s, sys: 808 ms, total: 1min 42s\n",
+      "Wall time: 1min 20s\n",
+      "CPU times: user 1min 8s, sys: 12 ms, total: 1min 8s\n",
+      "Wall time: 1min 8s\n",
       "\n",
       "\n",
       "\n",
-      "0        True\n",
-      "1        True\n",
-      "2        True\n",
-      "3        True\n",
-      "4       False\n",
-      "5        True\n",
-      "6       False\n",
-      "7       False\n",
-      "8       False\n",
-      "9       False\n",
-      "10      False\n",
-      "11      False\n",
-      "12      False\n",
-      "13      False\n",
-      "14       True\n",
-      "15       True\n",
-      "16      False\n",
-      "17      False\n",
-      "18      False\n",
-      "19      False\n",
-      "20       True\n",
-      "21      False\n",
-      "22      False\n",
-      "23      False\n",
-      "24      False\n",
-      "25      False\n",
-      "26      False\n",
-      "27      False\n",
-      "28      False\n",
-      "29      False\n",
-      "        ...  \n",
-      "4116    False\n",
-      "4117    False\n",
-      "4118    False\n",
-      "4119    False\n",
-      "4120    False\n",
-      "4121    False\n",
-      "4122    False\n",
-      "4123    False\n",
-      "4124    False\n",
-      "4125    False\n",
-      "4126    False\n",
-      "4127    False\n",
-      "4128    False\n",
-      "4129    False\n",
-      "4130    False\n",
-      "4131    False\n",
-      "4132    False\n",
-      "4133    False\n",
-      "4134    False\n",
-      "4135    False\n",
-      "4136    False\n",
-      "4137    False\n",
-      "4138    False\n",
-      "4139    False\n",
-      "4140    False\n",
-      "4141    False\n",
-      "4142    False\n",
-      "4143    False\n",
-      "4144    False\n",
-      "4145     True\n",
-      "Name: label, Length: 4146, dtype: bool\n",
-      "CPU times: user 32.1 s, sys: 8 ms, total: 32.1 s\n",
-      "Wall time: 31.9 s\n",
-      "CPU times: user 1min 44s, sys: 1.16 s, total: 1min 45s\n",
-      "Wall time: 1min 3s\n",
-      "CPU times: user 25.3 s, sys: 532 ms, total: 25.8 s\n",
-      "Wall time: 13.4 s\n",
-      "CPU times: user 1min, sys: 8 ms, total: 1min\n",
-      "Wall time: 1min\n"
+      "CPU times: user 33.4 s, sys: 0 ns, total: 33.4 s\n",
+      "Wall time: 33.3 s\n",
+      "CPU times: user 1min 49s, sys: 1.22 s, total: 1min 51s\n",
+      "Wall time: 1min 10s\n",
+      "CPU times: user 25.6 s, sys: 492 ms, total: 26.1 s\n",
+      "Wall time: 13.7 s\n",
+      "CPU times: user 1min 4s, sys: 8 ms, total: 1min 4s\n",
+      "Wall time: 1min 4s\n"
      ]
     }
    ],
@@ -490,7 +314,6 @@
     "tnfeatures = norm_list[0].transform(tfeatures.iloc[:-1,:])\n",
     "nfeatures = tnfeatures.T\n",
     "pfeatures = pd.concat([pd.DataFrame(data=nfeatures), labels], axis=1)\n",
-    "print(pfeatures.iloc[:, -1])\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(pfeatures.iloc[:, :-1], pfeatures['label'], test_size=0.5, random_state=0)\n",
     "file = open(\"../reports/parameter_tuning_\"+transforms_list[0], 'w')\n",
@@ -499,6 +322,128 @@
     "    file.write(30*\"**\"+\"\\n\")\n",
     "    file.write('Grid Search for '+ name +'\\n')\n",
     "    clf = GridSearchCV(estimator, tuned_parameters, cv=10)\n",
+    "    %time clf.fit(X_train, Y_train)\n",
+    "    file.write(str(clf.best_params_))\n",
+    "    file.write(str(clf.best_estimator_))\n",
+    "    file.write('\\n')\n",
+    "    means = clf.cv_results_['mean_test_score']\n",
+    "    stds = clf.cv_results_['std_test_score']\n",
+    "    for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
+    "        file.write(\"%0.3f (+/-%0.03f) for %r\\n\"% (mean, std * 2, params))\n",
+    "    file.write('\\nmean accuracy score:'+str(means.sum()/len(means)))\n",
+    "    file.write('\\n')\n",
+    "    file.write('\\n')\n",
+    "    y_true, y_pred = Y_test, clf.predict(X_test)\n",
+    "    file.write(classification_report(y_true, y_pred))\n",
+    "    file.write('\\n')\n",
+    "    file.write('\\n')\n",
+    "    file.write('\\n')\n",
+    "file.close()\n",
+    "\n",
+    "#scaling of the data\n",
+    "for norm, trans in zip(norm_list[1:], transforms_list[1:]):\n",
+    "    print()\n",
+    "    print()\n",
+    "    print()\n",
+    "    nfeatures = norm.fit_transform(features.iloc[:, :-1])\n",
+    "    ###############################################################\n",
+    "    pfeatures = pd.concat([pd.DataFrame(data=nfeatures), labels], axis=1)\n",
+    "    ###############################################################\n",
+    "    X_train, X_test, Y_train, Y_test = train_test_split(pfeatures.iloc[:, :-1], pfeatures['label'], test_size=0.5, random_state=0)\n",
+    "    file = open(\"../reports/parameter_tuning_\"+trans, 'w')\n",
+    "\n",
+    "    for estimator, tuned_parameters, name in zip(estimators_list, tuned_parameters_list, names_list):\n",
+    "        file.write(30*\"**\"+\"\\n\")\n",
+    "        file.write('Grid Search for '+ name +'\\n')\n",
+    "        clf = GridSearchCV(estimator, tuned_parameters, cv=10)\n",
+    "        %time clf.fit(X_train, Y_train)\n",
+    "        file.write(str(clf.best_params_))\n",
+    "        file.write(str(clf.best_estimator_))\n",
+    "        file.write('\\n')\n",
+    "        means = clf.cv_results_['mean_test_score']\n",
+    "        stds = clf.cv_results_['std_test_score']\n",
+    "        for mean, std, params in zip(means, stds, clf.cv_results_['params']):\n",
+    "            file.write(\"%0.3f (+/-%0.03f) for %r\\n\"% (mean, std * 2, params))\n",
+    "        file.write('\\nmean accuracy score:'+str(means.sum()/len(means)))\n",
+    "        file.write('\\n')\n",
+    "        file.write('\\n')\n",
+    "        y_true, y_pred = Y_test, clf.predict(X_test)\n",
+    "        file.write(classification_report(y_true, y_pred))\n",
+    "        file.write('\\n')\n",
+    "        file.write('\\n')\n",
+    "        file.write('\\n')\n",
+    "    file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 33.9 s, sys: 44 ms, total: 33.9 s\n",
+      "Wall time: 33.9 s\n",
+      "CPU times: user 2min 44s, sys: 1.28 s, total: 2min 46s\n",
+      "Wall time: 2min 4s\n",
+      "CPU times: user 16.1 s, sys: 408 ms, total: 16.5 s\n",
+      "Wall time: 8.28 s\n",
+      "CPU times: user 1min, sys: 8 ms, total: 1min\n",
+      "Wall time: 1min\n",
+      "\n",
+      "\n",
+      "\n",
+      "CPU times: user 31.3 s, sys: 0 ns, total: 31.3 s\n",
+      "Wall time: 31.1 s\n",
+      "CPU times: user 3min 41s, sys: 1.36 s, total: 3min 43s\n",
+      "Wall time: 3min 2s\n",
+      "CPU times: user 1min 41s, sys: 956 ms, total: 1min 42s\n",
+      "Wall time: 1min 20s\n",
+      "CPU times: user 1min 8s, sys: 36 ms, total: 1min 9s\n",
+      "Wall time: 1min 8s\n",
+      "\n",
+      "\n",
+      "\n",
+      "CPU times: user 32 s, sys: 8 ms, total: 32 s\n",
+      "Wall time: 31.8 s\n",
+      "CPU times: user 1min 47s, sys: 1.13 s, total: 1min 48s\n",
+      "Wall time: 1min 6s\n",
+      "CPU times: user 25.7 s, sys: 504 ms, total: 26.2 s\n",
+      "Wall time: 13.6 s\n",
+      "CPU times: user 1min 2s, sys: 84 ms, total: 1min 2s\n",
+      "Wall time: 1min 2s\n"
+     ]
+    }
+   ],
+   "source": [
+    "#construction of the lists\n",
+    "estimators_list = [SVC(),KNeighborsClassifier(), LogisticRegression(), RandomForestClassifier()]\n",
+    "tuned_parameters_list = [[{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4], 'C': [1, 10, 100, 1000]}],\n",
+    "                         [{'n_neighbors': [i for i in range(1,30)]}], \n",
+    "                         [{'C': [1,10,100,1000], 'tol': [1e-5,1e-4,1e-3]}], \n",
+    "                         [{'n_estimators': [10, 50, 100, 150, 200]}]]\n",
+    "norm_list = [Normalizer(), StandardScaler(), MinMaxScaler()]\n",
+    "names_list = [\"SVM\", \"KNN\", \"LR\", \"RF\"]\n",
+    "transforms_list = [\"norm\",\"scale\",\"minmax\"]\n",
+    "\n",
+    "\n",
+    "#breaking the data\n",
+    "labels = features.label\n",
+    "\n",
+    "#normalization of the data\n",
+    "tnfeatures = norm_list[0].transform(tfeatures.iloc[:-1,:])\n",
+    "nfeatures = tnfeatures.T\n",
+    "pfeatures = pd.concat([pd.DataFrame(data=nfeatures), labels], axis=1)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(pfeatures.iloc[:, :-1], pfeatures['label'], test_size=0.5, random_state=0)\n",
+    "file = open(\"../reports/nparameter_tuning_\"+transforms_list[0], 'w')\n",
+    "\n",
+    "for estimator, tuned_parameters, name in zip(estimators_list, tuned_parameters_list, names_list):\n",
+    "    file.write(30*\"**\"+\"\\n\")\n",
+    "    file.write('Grid Search for '+ name +'\\n')\n",
+    "    clf = GridSearchCV(estimator, tuned_parameters, cv=10, scoring='roc_auc')\n",
     "    %time clf.fit(X_train, Y_train)\n",
     "    file.write(str(clf.best_params_))\n",
     "    file.write('\\n')\n",
@@ -523,15 +468,14 @@
     "    nfeatures = norm.fit_transform(features.iloc[:, :-1])\n",
     "    ###############################################################\n",
     "    pfeatures = pd.concat([pd.DataFrame(data=nfeatures), labels], axis=1)\n",
-    "    print(pfeatures.iloc[:, -1])\n",
     "    ###############################################################\n",
     "    X_train, X_test, Y_train, Y_test = train_test_split(pfeatures.iloc[:, :-1], pfeatures['label'], test_size=0.5, random_state=0)\n",
-    "    file = open(\"../reports/parameter_tuning_\"+trans, 'w')\n",
+    "    file = open(\"../reports/nparameter_tuning_\"+trans, 'w')\n",
     "\n",
     "    for estimator, tuned_parameters, name in zip(estimators_list, tuned_parameters_list, names_list):\n",
     "        file.write(30*\"**\"+\"\\n\")\n",
     "        file.write('Grid Search for '+ name +'\\n')\n",
-    "        clf = GridSearchCV(estimator, tuned_parameters, cv=10)\n",
+    "        clf = GridSearchCV(estimator, tuned_parameters, cv=10, scoring='roc_auc')\n",
     "        %time clf.fit(X_train, Y_train)\n",
     "        file.write(str(clf.best_params_))\n",
     "        file.write('\\n')\n",
@@ -546,7 +490,7 @@
     "        file.write('\\n')\n",
     "        file.write('\\n')\n",
     "        file.write('\\n')\n",
-    "    file.close()\n"
+    "    file.close()"
    ]
   },
   {
